--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -50,6 +50,9 @@
                 href="/adduser"
                 type="button"
                 class="btn btn-outline-warning btn-small align-self-center"
+                data-placement="top"
+                data-toggle="tooltip"
+                title="Add"
               ><i class="bi bi-person-plus"></i>Add</a>
             </div>
           </div>
