--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -22,9 +23,16 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><span
-            class="material-icons md-light"
-          >manage_accounts</span></a>
+        <a class="navbar-brand" href="/">
+          <lord-icon
+            src="https://cdn.lordicon.com/ajkxzzfb.json"
+            trigger="loop-on-hover"
+            colors="primary:#ffc738,secondary:#4bb3fd"
+            scale="65"
+            state="morph-group"
+            style="width:50px;height:50px"
+          >
+          </lord-icon></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,7 +61,13 @@
                 data-placement="top"
                 data-toggle="tooltip"
                 title="Add"
-              ><i class="bi bi-person-plus"></i>Add</a>
+              ><lord-icon
+                  src="https://cdn.lordicon.com/ejxwvtlg.json"
+                  trigger="loop-on-hover"
+                  colors="outline:#e8b730,primary:#e8b730,secondary:#000000"
+                  style="width:35px;height:35px"
+                >
+                </lord-icon>Add</a>
             </div>
           </div>
 
@@ -71,7 +85,15 @@
               name="se"
               aria-label="Search"
             />
-            <button class="btn btn-outline-light" type="submit">Search</button>
+            <button class="btn btn-outline-light" type="submit">
+              <lord-icon
+                src="https://cdn.lordicon.com/osbjlbsb.json"
+                trigger="loop-on-hover"
+                colors="outline:#121331,secondary:#b26836,secondary2:#4bb3fd,quaternary:#ebe6ef"
+                scale="69"
+                style="width:30px;height:27px"
+              >
+              </lord-icon></button>
           </form>
 
         </div>
