--- a/views/partials/user-form.hbs
+++ b/views/partials/user-form.hbs
@@ -78,7 +78,7 @@
     >{{this.comments}}</textarea>
     <div class="col-auto">
       <span id="HelpInline" class="form-text">
-        Comment is not Compulsory
+        Optional
       </span>
     </div>
     <label for="comments">Comments</label>
